objects/RelatedOrganizationtoNotifyofXA__c.object
<CustomObject>
    <fields>
        <fullName>Check__c</fullName>
        <description>OCT 2015 Release :  Value added via batch class to send alerts</description>
        <label>Check</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContainmentAction__c</fullName>
        <label>Containment Action</label>
        <referenceTo>ContainmentAction__c</referenceTo>
        <relationshipLabel>Related Organization to Notify of XA</relationshipLabel>
        <relationshipName>Related_Organization_to_Notify_of_XA</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Related_Organization_to_Notify_of_XA</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Related Organization to Notify of XA</label>
    <nameField>
        <label>RelatedOrganization to Notify of XA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related Organization to Notify of XA</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>